@@ -3,7 +3,6 @@ require("scripts.events")
 DEV_ACTIVE = true  -- Enables certain conveniences for development
 
 REDRAW_CYCLE_RATE = 1 * 60  -- redraws entity status every second
-STATISTICS_WINDOW_SIZE = 60 * 60  -- ages out statistics after 60 seconds
 
 
 -- ** DATA **
