@@ -9,6 +9,7 @@ aa-magnetic-selection=Magnetic Selection
 aa-resnap-zone-on-change=Re-snap on change
 aa-reset-data-on-change=Reset data on change
 aa-exclude-inserters=Ignore inserters
+aa-window-size=Status readings window size
 aa-status-color-working=[font=default-bold]Color:[/font] Working
 aa-status-color-output_overload=[font=default-bold]Color:[/font] Output overload
 aa-status-color-input_shortage=[font=default-bold]Color:[/font] Input shortage
@@ -20,6 +21,7 @@ aa-magnetic-selection=Magnetic selection snaps the analysis area to the outside 
 aa-resnap-zone-on-change=Re-applies the magnetic selection algorithm when a relevant entity is added to or removed from a particular zone.
 aa-reset-data-on-change=Resets the data collected about a particular zone when a relevant entity is added to or removed from it.
 aa-exclude-inserters=Excludes inserters from your analysis zones to reduce the total amount of entities that are being tracked, improving performance.
+aa-window-size=Determines for how many seconds machine status readings are retained. This setting has no impact on performance. Changing it resets any currently active zones.
 
 [command-help]
 aa_clear_zones=Removes all currently selected zones for easy cleanup.
